---
source: crates/figue/src/schema/tests.rs
assertion_line: 193
expression: stripped
---
Error: top-level shape must be a struct
   ╭─[ <unknown>:1:1 ]
   │
 1 │ ╭─▶ #[derive(Facet)]
   ┆ ┆   
 3 │ │   enum TopLevelEnum {
   │ │        ──────┬─────  
   │ │              ╰─────── defined at crates\figue\src\schema\tests.rs:180
   ┆ ┆   
 5 │ ├─▶ }
   │ │   ┬  
   │ │   ╰── end of definition
   │ │      
   │ ╰────── top-level shape must be a struct
───╯
